[package]
name = "pinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
axum = "0.7.4"
dotenvy = "0.15.2"
serde = { version = "1.0.144", features = ["derive"] }
# serde_json = "1.0.103"
tokio = { version = "1.20.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3.15", features = [
    "env-filter",
    "registry",
    "json"
] }
uuid = "1.4.1"
ipnetwork = "0.20.0"
reqwest = "0.11.24"
console-subscriber= "0.2.0"
tikv-jemalloc-ctl = { version = "0.4.2", features = ['use_std'] }
tikv-jemallocator = { version = "0.4.3", features = ['unprefixed_malloc_on_supported_platforms'] } 